
2025-01-10: Got legacy heatmap conversion to work with leagues decontamination

2025-01-10: Added update message

2025-01-10: Changed HeatmapFile to HeatmapFileManager which is to be instanced and injected instead of being all static

2025-01-10: Got the legacy V1.2 heatmap handling to update the version so the naming scheme fix doesn't happen repeatedly

2025-01-12: There was a huge bug where switching config profiles in RuneLite would wipe most, if not all, of the
	heatmaps. It had something to do with how RuneLite sets the "isEnabled" checkbox values all to null at the same
	time.

** UPDATE RELEASED **

TODO: LOOT_VALUE is kinda useless because it's dependent on both the amount of loot dropped by each NPCs, and the frequency at which people kill them.
	Not sure if it's possible, but an AVERAGE_LOOT_VALUE would be much more informative. However, I suppose that would be information that is already available on the wiki.

TODO: Implement memory-saving method where:
	- only heatmap metadata is loaded from disk on startup (e.g. num tiles, total value)
		- This means I'd have to re-include them in toCSV()
	- only the newly incremented tiles are kept in memory
	- on save, the rest of the heatmap is loaded from disk, the new tiles are added to it, then it is rewritten
		- this means that the working file cannot be modified meanwhile. I suppose that was always the case doe
	- on image write and data upload, the file will be reloaded too

TODO: Update world map image

TODO: Make it so that the button that opens the website includes some user-agent/referrer deets about where the user was referred from (the plugin)

TODO: Make HeatmapNew.estimateSize not a static method

TODO: Make an auto-image button for each heatmap type instead of only having the option for both Type A and Type B

TODO stretch goal: Have the heatmaps displayable in the in-game world map similarly to how Shortest Path displays them.

TODO: stretch goal: Have the heatmaps visible on the ground in-game